# py-record

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
meeting/: cli.py  diarization.py  logger.py
reunion/: cli.py
ui/: gui_main.py
