[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-cli"
version = "1.0.6"
description = "CLI para grabar, transcribir y resumir reuniones con IA (OpenAI, Gemini, WhisperX)"
authors = [{ name = "Alex Perez Ortuño", email = "me@alexperezortuo.pro" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai==2.3.0",
    "faster-whisper==1.2.0",
    "transformers==4.57.1",
    "torch==2.8.0",
    "sentencepiece==0.2.1",
    "pydub==0.25.1",
    "whisperx==3.7.2",
    "google-genai==1.41.0",
    "charset-normalizer==3.0.0"
]

[project.scripts]
meeting = "meeting.cli:main"

