[metadata]
name = meeting-cli
version = 1.0.0
author = Alexander Pérez Ortuño
author_email = alex@alexperezortuno.pro
description = Meeting assistant that automatically records, transcribes and summarizes your Teams or Zoom meetings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlexPerezOrtuño/reunion-cli
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Utilities
    Intended Audience :: Developers
    Natural Language :: Spanish

[options]
packages = find:
python_requires = >=3.9
install_requires =
    openai>=1.0.0
    faster-whisper>=0.10.0
    transformers>=4.30.0
    torch
    sentencepiece

[options.entry_points]
console_scripts =
    meeting = meeting.cli:main
