[metadata]
name = meeting-cli
version = 1.0.0
author = Alexander Pérez Ortuño
author_email = alex@alexperezortuno.pro
description = Meeting assistant that automatically records, transcribes and summarizes your Teams or Zoom meetings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexperezortuno/py-record
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Utilities
    Intended Audience :: Developers
    Natural Language :: Spanish

[options]
packages = find:
python_requires = >=3.9
install_requires =
    openai==2.3.0
    faster-whisper==1.2.0
    transformers==4.57.1
    torch==2.8.0
    sentencepiece==0.2.1
    pydub==0.25.1
    whisperx==3.7.2
    google-genai==1.41.0

[options.entry_points]
console_scripts =
    meeting = meeting.cli:main
